@@ -93,5 +93,6 @@
         <file>images/services/tv.boingboing.net.png</file>
         <file>images/services/gametrailers.com.png</file>
         <file>images/services/tudou.com.png</file>
+        <file>images/services/myspass.de.png</file>
     </qresource>
 </RCC>
